# Cat

./: CMakeLists.txt  README.md  cat.cpp  cat.h  main.cpp  str_utils.h  test.h  utils.h
include/: arrow.h  cacat.h  cat.h  common.h  executor.h  frame.h  log.h  node.h  obj.h  parser.h  register.h  str_utils.h  tokenizer.h  types.h  utils.h
src/: arrow.cpp  cacat.cpp  cat.cpp  common.cpp  executor.cpp  log.cpp  node.cpp  obj.cpp  parser.cpp  register.cpp  str_utils.cpp  tokenizer.cpp  utils.cpp
test/: arrow_addition.h  arrow_application.h  arrow_application_native.h  arrow_associativity.h  arrow_composition.h  arrow_deletion.h  arrow_generator.h  arrow_inversion.h  arrow_query.h  arrow_query_on_node.h  arrow_query_test.h  arrow_sequence.h  arrow_validation.h  choice.h  composition.h  composition_test.h  determination.h  equivalence.h  exe_run.h  inversion.h  inversion_test.h  node_addition.h  node_deletion.h  node_initial_terminal.h  node_initial_terminal_test.h  node_query.h  node_query_by_arrow.h  node_query_by_arrow_test.h  node_query_test.h  object_deletion.h  parsing.h  sequence.h  sequence_test.h  test.h
